pod.yaml
apiVersion: v1
kind: Pod
metadata: 
    name: django-todo-pod
    namespace: django-todo-app
spec:
    containers:
    - name: django-todo-ctrl
      image: trainwitshubham/todo-app
      ports:
        - containerPort: 8001
