service-Nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: django-app
  name: django-service
  namespace: django-todo-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 31234
  selector:
    app: django-app
  type: NodePort
status:
  loadBalancer: {}
