service.yaml
apiVersion : "v1"
kind: "Service"
metadata:
  name: "django-todo-service"
  namespace: "django-todo-app"
spec:
  selector:
    app: "django-app"
  type: "LoadBalancer"
  ports:
    - port: 80
      targetPort: 8000
      protocol: "tcp"
